--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,14 @@
             <version>2.6</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>5.0.7.RELEASE</version>
+        </dependency>
+
+
 
     </dependencies>
 
