Resources Visualization (not full)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -250,7 +250,7 @@
     
     <servlet>
         <servlet-name>ResourcesServlet</servlet-name>
-        <servlet-class>sections.education.resources.ResourcesPageServlet</servlet-class>
+        <servlet-class>sections.education.resources.ResourcesCategoriesPageServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>ResourcesServlet</servlet-name>
