Resources almost final visualization - some minor problems with downloading older resources. Problem with files being uploaded simultaneously - might reveal itself when downloading older hw.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -256,7 +256,27 @@
         <servlet-name>ResourcesServlet</servlet-name>
         <url-pattern>/edu/lib</url-pattern>
     </servlet-mapping>
-    
+    <servlet>
+        <servlet-name>ResourcesFilesServlet</servlet-name>
+        <servlet-class>sections.education.resources.ResourcesFilesServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ResourcesFilesServlet</servlet-name>
+        <url-pattern>/edu/lib/files</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>AddResourceItems</servlet-name>
+        <servlet-class>sections.education.resources.AddResourceItemServlet</servlet-class>
+        <init-param>
+            <param-name>pathSuffixForResourceFiles</param-name>
+            <param-value>res</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AddResourceItems</servlet-name>
+        <url-pattern>/edu/lib/add</url-pattern>
+    </servlet-mapping>
+
     <servlet>
         <servlet-name>EduPageServlet</servlet-name>
         <servlet-class>sections.education.EduPageServlet</servlet-class>
