--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,14 @@
             <version>5.0.7.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+
 
 
 
