Separated header from pages, now it is served from another JSP. Need to specify ActiveNavBarSection request attribute before accessing JSP. Sign In is now served through JSP. Deleted Unnecessary html files.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -75,6 +75,7 @@
         <filter-name>IfAuthorisedFilter</filter-name>
         <!--<url-pattern>/add/*</url-pattern>-->
         <url-pattern>/edu/*</url-pattern>
+        <url-pattern>/files/fav</url-pattern>
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
     <!--end filters-->
