--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,12 @@
             <version>1.4</version>
         </dependency>
 
-
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
 
 
 
