--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -53,7 +53,7 @@
     <!--In welcome-file-list, you have to specify url of servlet/jsp without first slash(/)-->
     <!--If I want servlet mapped to url /MainPage to be default page, I write MainPage here-->
     <welcome-file-list>
-        <welcome-file>edu/sc</welcome-file>
+        <welcome-file>MainPage</welcome-file>
     </welcome-file-list>
 
     <!--filters-->
@@ -128,6 +128,15 @@
     <!--end filters-->
 
     
+    <servlet>
+        <servlet-name>MainPageServlet</servlet-name>
+        <servlet-class>MainPageServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>MainPageServlet</servlet-name>
+        <url-pattern>/MainPage</url-pattern>
+    </servlet-mapping>
+
     <!--begin signin signout servlets-->
     <servlet>
         <servlet-name>SignInServlet</servlet-name>
@@ -155,6 +164,15 @@
     <servlet-mapping>
         <servlet-name>AccountPageServlet</servlet-name>
         <url-pattern>/acc</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ChangePasswordServlet</servlet-name>
+        <servlet-class>account.ChangePasswordServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ChangePasswordServlet</servlet-name>
+        <url-pattern>/acc/changepassword</url-pattern>
     </servlet-mapping>
     <!--end signin signout servlets-->
     
