Added logging to ALL necessary files: now logging to 2 files - logging-all and logging-error A bug of incorrect homework order fixed A bug of not working FavouriteFiles in Resources and homework fixed

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,10 @@
         <param-value>RMC</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>log4jConfiguration</param-name>
+        <param-value>/WEB-INF/log4j.xml</param-value>
+    </context-param>
 
     <!--<servlet-mapping>-->
         <!--<servlet-name>default</servlet-name>-->
